--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_document_list">Select Group</string>
+    <string name="title_activity_pdf_viewer">Конспект</string>
 </resources>
